fix overflow scroll content moving

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,3 +1,6 @@
+html {
+    overflow-y: scroll;
+}
 body {
     height: 100vh;
 }
@@ -6,8 +9,6 @@ body {
     display: flex;
     flex-direction: column;
 }
-
-
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -15,7 +16,6 @@ body {
     -moz-user-select: none;
     user-select: none;
 }
-
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
